Fixed password change modal open overflow issue

--- a/src/components/changePassword/changePassword.css
+++ b/src/components/changePassword/changePassword.css
@@ -6,7 +6,6 @@
   z-index: 110;
   right: 0;
   top: 0;
-  overflow: scroll;
 }
 
 .password-change-modal {
